remove panicstr KASSERT() in pmap_kremove_local() - kernel dump can legitimely invoked also without panic - via reboot -d

fixes PR kern/49610 by Manuel Bouyer